fix: .navegacion z-index

--- a/05-guitarLA/css/main.css
+++ b/05-guitarLA/css/main.css
@@ -71,6 +71,8 @@ img {
     display: flex;
     gap: 2rem;
     margin-top: 5rem;
+    position: relative;
+    z-index: 1;
 }
 
 @media (min-width: 768px) {
